/*
  Copyright (c) 2025

  Description:
    Internal interaction contract

  Owner: 
    dev team
    
  Methods:
    - GetHistories ( Получение агрегированной истории для всех пользователей [manager] )
    - GetDetailedHistories ( Получение детальной истории операций для набора пользователей [manager] )
    - GetUserBalance ( Получение текущего баланса пользователя [manager] )
    - DebitAllTips ( Списание всех подсказок со всех пользователей [manager] )
    - UpdateBalance ( Изменение баланса отдельного пользователя [manager] )
    - GetHistoriesByUser ( Получение агрегированной истории для пользователя [user] )
    - GetDetailedHistoriesByUser ( Получение детальной истории операций для пользователя [user] )
*/

syntax = "proto3";
package api.tips.balance.v1;
option csharp_namespace = "ApiTips.Api.Balance.V1";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import 'custom_enums/v1/custom_enums.proto';
import 'general_entities/v1/general_entities.proto';

service ApiTipsBalanceService {
  /*
   * Получение аггрегированной истории для всех пользователей
   */
  rpc GetHistories (GetHistoriesRequest) returns (GetHistoriesResponse);

  /*
   * Получение детальной истории операций для набора пользователей
   */
  rpc GetDetailedHistories (GetDetailedHistoriesRequest) returns (GetDetailedHistoriesResponse);

  /*
   * Получение детальной истории операций для набора пользователей
   */
  rpc GetUserBalance (GetUserBalanceRequest) returns (GetUserBalanceResponse);

  /*
   * Получение текущего баланса пользователя
   */
  rpc GetHistoriesByUser (GetHistoriesByUserRequest) returns (GetHistoriesByUserResponse);

  /*
   * Получение детальной истории операций для пользователя
   */
  rpc GetDetailedHistoriesByUser (GetDetailedHistoriesByUserRequest) returns (GetDetailedHistoriesByUserResponse);

  /*
   * Списание всех подсказок со всех пользователей
   */
  rpc DebitAllTips (DebitAllTipsRequest) returns (DebitAllTipsResponse){
    option idempotency_level = IDEMPOTENT;
  };

  /*
   * Добавить запись в историю баланса отдельного пользователя - ручной способ изменить баланс для админа
   */
  rpc UpdateBalance (UpdateBalanceRequest) returns (UpdateBalanceResponse){
    option idempotency_level = IDEMPOTENT;
  };
}

/*
 * Запрос - получение агрегированной истории операций по всем пользователям
 */
message GetHistoriesRequest {
  /*
   * Дата начала периода сбора истории операций
   */
  google.protobuf.Timestamp start_date = 1;

  /*
   * Дата конца диапазона сбора истории операций
   */
  google.protobuf.Timestamp end_date = 2;
}

/*
 * Ответ - получение агрегированной истории операций по всем пользователям
 */
message GetHistoriesResponse {
  /*
   * Список агрегированных данных истории баланса по годам
   */
  repeated Year years = 1;

  /*
   * Мета информация ответа
   */
  api.tips.general_entities.v1.GeneralResponse response = 10;
}

/*
 * Запрос - получение детальной истории операций по списку пользователей
 */
message GetDetailedHistoriesRequest {
  /*
   * Идентификаторы пользователей
   */
  repeated int64 user_ids = 1;

  /*
   * Год и месяц за который нужно получиться детальную информацию для пользователей
   */
  google.protobuf.Timestamp date = 2;
}

/*
 * Ответ - получение детальной истории операций по списку пользователей
 */
message GetDetailedHistoriesResponse {
  /*
   * Агрегированная информация за месяц с детальной информацией по запрошенным пользователям
   */
  optional Month month = 1;

  /*
   * Мета информация ответа
   */
  api.tips.general_entities.v1.GeneralResponse response = 10;
}

/*
 * Запрос - получение текущего баланса пользователя
 */
message GetUserBalanceRequest {
  /*
   * Идентификатор пользователя
   */
  int64 user_id = 1;
}

/*
 * Ответ - получение текущего баланса пользователя
 */
message GetUserBalanceResponse {
  /*
   * Идентификатор пользователя
   */
  int64 user_id = 1;

  /*
   * Текущий баланс пользователя
   */
  optional int64 balance = 2;

  /*
   * Мета информация ответа
   */
  api.tips.general_entities.v1.GeneralResponse response = 10;
}

/*
 * Запрос - получение агрегированной истории операций по пользователю
 */
message GetHistoriesByUserRequest {
  /*
   * Дата начала периода сбора истории операций
   */
  google.protobuf.Timestamp start_date = 1;

  /*
   * Дата конца диапазона сбора истории операций
   */
  google.protobuf.Timestamp end_date = 2;
}

/*
 * Ответ - получение агрегированной истории операций по пользователю
 */
message GetHistoriesByUserResponse {
  /*
   * Список агрегированных данных истории баланса по годам
   */
  repeated Year years = 1;

  /*
   * Мета информация ответа
   */
  api.tips.general_entities.v1.GeneralResponse response = 10;
}

/*
 * Запрос - получение детальной истории операций по списку пользователей
 */
message GetDetailedHistoriesByUserRequest {
  /*
   * Год и месяц за который нужно получиться детальную информацию для пользователя
   */
  google.protobuf.Timestamp date = 1;
}

/*
 * Ответ - получение детальной истории операций по списку пользователей
 */
message GetDetailedHistoriesByUserResponse {
  /*
   * Агрегированная информация за месяц с детальной информацией по запрошенным пользователям
   */
  optional Month month = 1;

  /*
   * Мета информация ответа
   */
  api.tips.general_entities.v1.GeneralResponse response = 10;
}

/*
 * Запрос - списание всех подсказок со всех пользователей
 */
message DebitAllTipsRequest {}

/*
 * Ответ - списание всех подсказок со всех пользователей
 */
message DebitAllTipsResponse {
  /*
   * Мета информация ответа
   */
  api.tips.general_entities.v1.GeneralResponse response = 10;
}

/*
 * Запрос - изменение баланса отдельного пользователя
 */
message UpdateBalanceRequest {
  /*
   * Идентификатор пользователя
   */
  int64 user_id = 1;

  /*
   * Количество бесплатных подсказок, которое нужно начислить
   */
  optional int64 credited_free_tips_count = 2;

  /*
   * Количество платных подсказок, которое нужно начислить
   */
  optional int64 credited_paid_tips_count = 3;

  /*
   * Общее количество подсказок, которое нужно списать
   */
  optional int64 debited_tips_count = 4;

  /*
   * Тип операции (поплнение/списание)
   */
  custom_enums.v1.BalanceOperationType operation_type = 5;

  /*
   * Описание причины изменения баланса (покупка/списание/промо)
   */
  string reason = 6;
}

/*
 * Ответ - изменение баланса отдельного пользователя
 */
message UpdateBalanceResponse {
  /*
   * Идентификатор пользователя
   */
  int64 user_id = 1;

  /*
   * Добавленная операция в историю баланса указанного пользователя
   */
  optional Operation operation = 2;

  /*
   * Мета информация ответа
   */
  api.tips.general_entities.v1.GeneralResponse response = 10;
}

/* ---------- Entities ---------- */

/*
 * Сущность агрегированной информации за год
 */
message Year {
  /*
   * Год
   */
  google.protobuf.Timestamp date = 1;

  /*
   * Количество бесплатных подсказок, которые были начислены
   */
  optional int64 credited_free_tips_count = 2;

  /*
   * Количество оплаченных подсказок, которые были начислены
   */
  optional int64 credited_paid_tips_count = 3;

  /*
   * Общее количество подсказок, которые были списаны
   */
  optional int64 debited_tips_count = 4;

  /*
   * Список агрегированной информации по месяцам
   */
  repeated Month months = 5;
}

/*
 * Сущность агрегированной информации за месяц
 */
message Month {
  /*
   * Месяц
   */
  google.protobuf.Timestamp date = 1;

  /*
   * Количество бесплатных подсказок, которые были начислены
   */
  optional int64 credited_free_tips_count = 2;

  /*
   * Количество оплаченных подсказок, которые были начислены
   */
  optional int64 credited_paid_tips_count = 3;

  /*
   * Общее количество подсказок, которые были списаны
   */
  optional int64 debited_tips_count = 4;

  /*
   * Список агрегированной информации по пользователям
   */
  repeated User users = 5;
}

/*
 * Сущность агрегированной информации по пользователю
 */
message User {
  /*
   * Идентификатор пользователя
   */
  int64 id = 1;

  /*
   * Почта пользователя
   */
  string email = 2;

  /*
   * Имя пользователя
   */
  string first_name = 3;

  /*
   * Фамилия пользователя
   */
  string last_name = 4;

  /*
   * Количество бесплатных подсказок, которые были начислены
   */
  optional int64 credited_free_tips_count = 5;

  /*
   * Количество оплаченных подсказок, которые были начислены
   */
  optional int64 credited_paid_tips_count = 6;

  /*
   * Общее количество подсказок, которые были списаны
   */
  optional int64 debited_tips_count = 7;

  /*
   * Список агрегированной информации по дням
   */
  repeated Day days = 8;
}

/*
 * Сущность агрегированной информации за день
 */
message Day {
  /*
   * День
   */
  google.protobuf.Timestamp date = 1;

  /*
   * Количество бесплатных подсказок, которые были начислены
   */
  optional int64 credited_free_tips_count = 2;

  /*
   * Количество оплаченных подсказок, которые были начислены
   */
  optional int64 credited_paid_tips_count = 3;

  /*
   * Общее количество подсказок, которые были списаны
   */
  optional int64 debited_tips_count = 4;

  /*
   * Операции, которые были совершены в течение дня
   */
  repeated Operation operations = 5;
}

/*
 * Сущность операции в истории баланса
 */
message Operation {
  /*
   * Идентификатор операции
   */
  int64 id = 1;

  /*
   * Количество бесплатных подсказок, которые были начислены
   */
  optional int64 credited_free_tips_count = 2;

  /*
   * Количество оплаченных подсказок, которые были начислены
   */
  optional int64 credited_paid_tips_count = 3;

  /*
   * Общее количество подсказок, которые были списаны
   */
  optional int64 debited_tips_count = 4;

  /*
   * Тип операции (поплнение/списание)
   */
  custom_enums.v1.BalanceOperationType operation_type = 5;

  /*
   * Причина изменения баланса (покупка/списание/промо)
   */
  string reason = 6;

  /*
   * Дата совершения операции
   */
  google.protobuf.Timestamp operation_date = 7;

  /*
   * Общий остаток подсказок на балансе после совершения операции
   */
  int64 total_tips_balance = 8;
}